--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -105,7 +105,7 @@
         </footer> -->
     </div>
 
-    <script src="assets/script.js"></script>
+    <script type="module" src="assets/script.js"></script>
 
 </body>
 </html>
