--- a/Jupyter Exercice/HTML/Les tendances de votes par bureau de vote pour les présidentielles (1er tour de 2017).html
+++ b/Jupyter Exercice/HTML/Les tendances de votes par bureau de vote pour les présidentielles (1er tour de 2017).html
@@ -41,4 +41,4 @@
             <div class="folium-map" id="map_df0daa1c504542bb99f6cfcc38997b57" ></div>
         
 </body>
-<script src="Les tendances de votes par bureau de vote pour les présidentielles (1er tour de 2017).js"></script>
+<script src="Les tendances de votes par bureau de vote pour les présidentielles (1er tour de 2017).js.gz"></script>
