--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="xLarge-10 large-10 medium-11 small-11">
                     <ul class="menu flex" style="flex-wrap:wrap;">
-                        <li style="flex:1"><a href="#">Région</a></li>
+                        <li style="flex:1"><a href="#">Région h</a></li>
                         <li style="flex:1"><a href="#">Département</a></li>
                         <li style="flex:1"><a href="#">Commune</a></li>
                     </ul>
